vlib/v/parser/tests/embed_file_evaluated_but_not_used_in_anon_fn_match_return.vv
import v.embed_file

fn main() {
	n := 0
	'' == fn () embed_file.EmbedFileData {
		match n {
			0 {
				return $embed_file(@FILE)
			}
			else {
				return $embed_file(@FILE)
			}
		}
	}().path
}
